--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-
+<a href="https://almastoktasyn3.wixsite.com/website-1"> My wix</a>
     <header>
 
         <h1>Newton's Laws of Motion</h1>
@@ -60,7 +60,7 @@
 
     </footer>
 
-    <a href="https://almastoktasyn3.wixsite.com/website-1">wix</a>
+    
 
 </body>
 
